--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "prepublish": "npm run compile",
     "test": "npm run compile && mocha --compilers js:babel-core/register"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/masotime/redouter.git"
+  },
   "keywords": [
     "react",
     "react-router",
