--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "redouter is a library of functions an opinion of how to integrate React, redux and react-router to generate universal web applications",
   "main": "lib/index.js",
   "scripts": {
-    "compile": "babel --presets es2015,stage-0 -d lib/ src/",
+    "compile": "babel --presets es2015,stage-0,react -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "npm run compile && mocha --compilers js:babel-core/register"
   },
@@ -23,7 +23,22 @@
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.26",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
-    "mocha": "^2.3.4"
+    "history": "^1",
+    "mocha": "^2.3.4",
+    "react": "^0.14",
+    "react-dom": "^0.14",
+    "react-redux": "^4",
+    "react-router": "^1",
+    "redux": "^3"
+  },
+  "peerDependencies": {
+    "history": "^1",
+    "react": "^0.14",
+    "react-redux": "^4",
+    "react-router": "^1",
+    "react-dom": "^0.14",
+    "redux": "^3"
   }
 }
