--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "redouter is a library of functions an opinion of how to integrate React, redux and react-router to generate universal web applications",
   "main": "lib/index.js",
   "scripts": {
-    "compile": "babel --presets es2015,stage-0,react -d lib/ src/",
+    "compile": "rm -rf lib/; babel --presets es2015,stage-0,react -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "npm run compile && mocha --compilers js:babel-core/register"
   },
@@ -40,5 +40,8 @@
     "react-router": "^1",
     "react-dom": "^0.14",
     "redux": "^3"
+  },
+  "dependencies": {
+    "js-beautify": "^1.5.10"
   }
 }
