--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "compile": "rm -rf lib/; babel --presets es2015,stage-0,react -d lib/ src/",
     "prepublish": "npm run compile",
-    "test": "npm run compile && mocha --compilers js:babel-core/register"
+    "test": "mocha --compilers js:babel-core/register"
   },
   "repository": {
     "type": "git",
