--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "redux": "^3"
   },
   "dependencies": {
+    "es6-promise": "^3.0.2",
+    "isomorphic-fetch": "^2.2.0",
     "js-beautify": "^1.5.10",
     "route-action": "^1.0.0"
   }
