--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "redouter is a library of functions an opinion of how to integrate React, redux and react-router to generate universal web applications",
   "main": "lib/index.js",
   "scripts": {
-    "compile": "rm -rf lib/; babel --presets es2015,stage-0,react -d lib/ src/",
+    "lint": "eslint src/*",
+    "compile": "rm -rf lib/; babel --plugins transform-runtime --presets es2015,stage-0,react -d lib/ src/",
     "prepublish": "npm run compile",
     "test": "mocha --compilers js:babel-core/register"
   },
@@ -20,28 +21,31 @@
   "author": "Benjamin Goh <masotime@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.26",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "history": "^1",
+    "babel-cli": "^6",
+    "babel-core": "^6",
+    "babel-eslint": "^6",
+    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-preset-es2015": "^6",
+    "babel-preset-react": "^6",
+    "babel-preset-stage-0": "^6",
+    "history": "^2",
     "mocha": "^2.3.4",
     "react": "^0.14",
     "react-dom": "^0.14",
     "react-redux": "^4",
-    "react-router": "^1",
+    "react-router": "^2",
     "redux": "^3"
   },
   "peerDependencies": {
-    "history": "^1",
+    "history": "^2",
     "react": "^0.14",
     "react-redux": "^4",
-    "react-router": "^1",
+    "react-router": "^2",
     "react-dom": "^0.14",
     "redux": "^3"
   },
   "dependencies": {
+    "babel-runtime": "^6",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
     "js-beautify": "^1.5.10",
